# CppHESS

./: .gitignore  Bishop.cpp  Bishop.h  C++HESS.h  CMakeLists.txt  Classes.h  Conditions.txt  Game.h  King.h  Knight.cpp  Knight.h  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Queen.cpp  README.md  README.txt  Strategy.h  main.cpp  single_functions.cpp
source/: Bishop.cpp  Board.cpp  Board.h  BoardGlobals.h  C++HESS.h  CMakeLists.txt  Classes.h  Console.cpp  Console.h  Game.cpp  Game.h  GameFactory.cpp  GameFactory.h  King.cpp  King.h  Knight.cpp  Knight.h  LastMovedPiece.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Strategy.cpp  Strategy.h  StrategyGeneral.h  StrategyInterface.h  StrategyManual.cpp  StrategyManual.h  StrategyOrdered.cpp  StrategyOrdered.h  StrategyRandom.cpp  StrategyRandom.h  WinConsole.cpp  WinConsole.h  (+4 more)
source/source/: Bishop.cpp  Bishop.h  Board.h  C++HESS.h  Game.cpp  Game.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Player.cpp  Queen.h  WinConsole.h
