add_executable(CppHESS 
    main.cpp 
    Player.cpp 
    single_functions.cpp 

    Board.cpp 
    Game.cpp 
    GameFactory.cpp
    Piece.cpp 

    Queen.cpp 
    Rook.cpp 
    King.cpp 
    Knight.cpp 
    Pawn.cpp 
    Bishop.cpp 

    StrategyManual.cpp 
    StrategyOrdered.cpp 
    StrategyRandom.cpp 

    Console.cpp)